# TAMCM-human

./: README.md  __init__.py  artifact_manifest.csv  install.sh  requirement.txt  setup.cfg  surface_asset_export.py
model_profiles/1ljjfnbx/: config.yaml
model_profiles/hhh2ffxe_CAPE_/: config.yaml
model_profiles/matchAMASS_4D-DRESS/: config.yaml
model_profiles/matchAMASS_CAPE/: config.yaml
profiles/: default_4d-dress.yaml  default_cape.yaml  default_err.yaml  default_match.yaml
src/volumetric_bodyfit/: __init__.py
src/volumetric_bodyfit/config/: runtime.py
src/volumetric_bodyfit/dataflow/: lightning_bridge.py  surface_samples.py
src/volumetric_bodyfit/entrypoints/: batch_register.py  cape_reconstruction.py  cape_scan_reconstruction.py  dress_reconstruction.py  interactive_app.py
src/volumetric_bodyfit/fieldnets/: volume_query.py
src/volumetric_bodyfit/reports/: cape_report.py  cape_scan_report.py  cape_variant_report.py  dress_report.py  faust_report.py  metric_correlation.py  pair_transfer.py
src/volumetric_bodyfit/solver/: geometry.py  system.py
