[metadata]
name = volumetric_bodyfit
description = Volumetric human body fitting toolkit
long_description = file: README.md
keywords = python, pytorch, geometry, registration
license = Proprietary

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    nn-template-core ==0.1.1
    pytorch-lightning ==1.5.10
    hydra-core ==1.3.2
    wandb ==0.15.2
    streamlit ==1.22.0
    rich
    dvc
    python-dotenv
    matplotlib
    stqdm

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md, *.json

[options.extras_require]
test =
    pytest
    pytest-cov

dev =
    black
    flake8
    isort
    pre-commit
    bandit
    %(test)s
